@@ -1,5 +1,7 @@
 #!/usr/bin/perl
 
-$status=`/bin/bash -c 'wget --quiet -O - http://192.168.100.1/cgibin/opcfg | grep "10.18.18.11" -c'`;
+open(PROCESS, "/bin/bash -c 'wget --quiet -O - http://192.168.100.1/cgibin/opcfg | grep \"10.18.18.11\" -c' |");
+$status = <PROCESS>;
+close(PROCESS);
 chomp $status;
 print $status;
