@@ -1,7 +1,9 @@
 #!/usr/bin/perl
 
 #get load avg for 1;5;10 min
-$avg = `uptime`;
+open(PROCESS, "uptime |");
+$avg = <PROCESS>;
+close(PROCESS);
 
 #   9:36pm  up 15 days, 11:37,  2 users,  load average: 0.14, 0.13, 0.10
 
