@@ -5,10 +5,11 @@ my $grep_string = $ARGV[0];
 chomp $grep_string;
 
 if ($grep_string eq '') {
-	$output = `netstat -n | grep -c tcp`;
+	open(PROCESS, "netstat -n | grep -c tcp | ");
 }else{
-	$output = `netstat -n | grep tcp | grep -c $grep_string`;
+	open(PROCESS, "netstat -n | grep tcp | grep -c $grep_string |");
 }
-
+$output = <PROCESS>;
+close(PROCESS);
 chomp($output);
 print $output;
