@@ -5,10 +5,11 @@ my $grep_string = $ARGV[0];
 chomp $grep_string;
 
 if ($grep_string eq '') {
-        $output = `who | grep -c :`;
+	open(PROCESS, "who | grep -c : |");
 }else{
-        $output = `who | grep : | grep -c $grep_string`;
+	open(PROCESS, "who | grep : | grep -c $grep_string |");
 }
-
+$output = <PROCESS>;
+close(PROCESS);
 chomp($output);
 print $output;
